# fashion_mnist

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: actions.yaml
repo/: requirements.txt
src/: model.py
src/utils/: __init__.py  generator.py
templates/: eval.html  infer.html  train.html  train_finish.html
