[tool.poetry]
name = "fashion_mnist"
version = "0.1.0"
description = ""
authors = ["Anuj Arora <anujarora920804@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
tensorflow-datasets = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pylint-fail-under = "^0.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
